# VST-EMERALD-SERAPHIC

./: CMakeLists.txt  README.md
Release/Artifacts/Source/: PluginEditor.cpp
Release/Artifacts/Source/DSP/: VitalityEngine.h  WavetableOscillator.cpp  WavetableOscillator.h
Release/Artifacts/Source/UI/: EmeraldCoreShader.h  EmeraldTabletFrame.h
Release/Artifacts/Tests/: README.md  Seraphic_DSP_Consistency_Test_01.cpp  Seraphic_Multi_Test_Suite_03.cpp
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: SeraphicFilter.h
Source/UI/: EmeraldCoreShader.cpp  SeraphicLookAndFeel.cpp  SeraphicLookAndFeel.h
Tests/: Seraphic_System_Integrity_Test_02.cpp
Tests/MockJUCE/: juce_audio_basics.h
VST-1-GEM-1-VST/collecter-of-the-idea/: THE thing.md  idea.tsx  original.md
juice-docs/: 01_Core_DSP_and_Audio_Engine.md  02_Visuals_Graphics_and_OpenGL.md  03_Concurrency_Data_and_Math.md  04_Frontend_100_Critical_Architecture.md  05_Backend_200_Critical_Architecture.md  06_The_Magnum_Opus_Frontend.md  07_The_Magnum_Opus_Backend.md
